--- a/CalculadoraIdade/src/main/resources/org/example/calculadoraidade/hello-view.fxml
+++ b/CalculadoraIdade/src/main/resources/org/example/calculadoraidade/hello-view.fxml
@@ -2,16 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21"
-      fx:controller="org.example.calculadoraidade.HelloController">
-    <AnchorPane fx:id="panelMain" prefHeight="200.0" prefWidth="346.0">
-        <Button fx:id="btnCalcular" layoutX="25.0" layoutY="75.0" mnemonicParsing="false" text="Calcular"/>
-        <Label fx:id="lblAnoNascimento" layoutX="25.0" layoutY="39.0" text="Ano de Nascimento: "/>
-        <Label layoutX="25.0" layoutY="128.0" text="Idade:"/>
-        <Label fx:id="lblIdade" layoutX="68.0" layoutY="128.0" text="0"/>
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.calculadoraidade.HelloController">
+    <AnchorPane fx:id="panelMain" prefHeight="155.0" prefWidth="399.0">
+        <Button fx:id="btnCalcular" layoutX="29.0" layoutY="53.0" mnemonicParsing="false" onAction="#calcularIdade" text="Calcular" />
+        <Label fx:id="lblAnoNascimento" layoutX="28.0" layoutY="27.0" text="Ano de Nascimento: " />
+        <Label layoutX="29.0" layoutY="92.0" text="Idade:" />
+        <Label fx:id="lblIdade" layoutX="77.0" layoutY="92.0" text="0" />
+      <Spinner fx:id="spinnerAnoNascimento" layoutX="147.0" layoutY="23.0" />
     </AnchorPane>
 </VBox>
