--- a/Exe016/src/main/resources/org/example/exe016/hello-view.fxml
+++ b/Exe016/src/main/resources/org/example/exe016/hello-view.fxml
@@ -7,13 +7,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="394.0" prefWidth="319.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.exe016.HelloController">
+<AnchorPane fx:id="panelMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="319.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.exe016.HelloController">
     <Label layoutX="83.0" layoutY="23.0" text="Super Calculadora">
         <font>
             <Font name="System Bold" size="18.0" />
         </font>
     </Label>
-    <VBox layoutX="30.0" layoutY="146.0" prefHeight="270.0" prefWidth="165.0" spacing="30.0">
+    <VBox fx:id="vBox1" layoutX="30.0" layoutY="146.0" prefHeight="270.0" prefWidth="149.0" spacing="30.0" visible="false">
         <Label text="Resto da Divisao por 2">
             <font>
                 <Font size="14.0" />
@@ -40,7 +40,7 @@
             </font>
         </Label>
     </VBox>
-    <VBox layoutX="265.0" layoutY="146.0" prefHeight="225.0" prefWidth="24.0" spacing="25.0">
+    <VBox fx:id="vBox2" layoutX="249.0" layoutY="146.0" prefHeight="225.0" prefWidth="71.0" spacing="25.0" visible="false">
         <Label fx:id="lblRestoDivisao" text="0" textFill="#1900f7">
             <font>
                 <Font size="16.0" />
